plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "7.1.2"
    id("io.papermc.paperweight.userdev")
}

group 'dev.imabad.mceventsuite'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name "Spigot"
        url "https://hub.spigotmc.org/nexus/content/repositories/snapshots"
    }
    maven {
        name "Bungeecord"
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    if(System.getenv("GITHUB_USERNAME") != null || project.findProperty("gpr.user") != null){
        maven {
            url = uri("https://maven.pkg.github.com/MCEventSuite/EventCore")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
    maven { url = uri("https://repo.papermc.io/repository/maven-public/") }
    maven { url 'https://jitpack.io' }
    maven { url = 'https://repo.md-5.net/content/repositories/snapshots/' } // NCP
    maven { url = "https://maven.enginehub.org/repo/" } // WorldEdit
    maven { url = "https://libraries.minecraft.net"} // Authlib / Minecraft
    maven { url = "https://repo.codemc.io/repository/maven-public/"} //CodeMC
    maven { url = "https://repo.opencollab.dev/maven-snapshots"} //Geyser
    maven { url = "https://repo.opencollab.dev/maven-releases"} //Geyser
    maven { url =  "https://repo.clojars.org/" } //MultiPaper
}

dependencies {
    paperweightDevelopmentBundle("io.papermc.paper:dev-bundle:1.19.2-R0.1-SNAPSHOT")
    implementation(platform("com.intellectualsites.bom:bom-1.18.x:1.13"))
//    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation('org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final')
    implementation 'dev.imabad.mceventsuite:eventcore:1.0-SNAPSHOT'
    implementation "com.github.puregero:multipaper-api:1.19.2-R0.1-SNAPSHOT"
    implementation "com.github.puregero:multilib:1.1.5"
    implementation("com.microsoft.azure.cognitiveservices:azure-cognitiveservices-contentmoderator:1.0.2-beta")
    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
    compileOnly("com.sk89q.worldedit:worldedit-bukkit:7.2.0-SNAPSHOT")
    compileOnly("com.sk89q.worldguard:worldguard-bukkit:7.0.4-SNAPSHOT")
    compileOnly("com.plotsquared:PlotSquared-Core:6.9.4")
    compileOnly("com.plotsquared:PlotSquared-Bukkit:6.9.4")
    compileOnly("com.mojang:authlib:1.5.21")
    implementation 'net.kyori:adventure-platform-bukkit:4.1.2'
    compileOnly ('xyz.xenondevs:particle:1.7.1')
    compileOnly 'dev.imabad.mceventsuite:wgregionevents:1.4-SNAPSHOT'
    compileOnly 'com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.0'
//    compileOnly 'dev.imabad.mceventsuite:cubedcosmetics:1.0'
    compileOnly 'org.geysermc.floodgate:api:2.0-SNAPSHOT'
    compileOnly 'fr.neatmonster:nocheatplus:3.16.1-SNAPSHOT'
//    compileOnly "com.destroystokyo.paper:paper-api:1.18.2-R0.1-SNAPSHOT"
//    compileOnly "com.destroystokyo.paper:paper:1.16.5-R0.1-SNAPSHOT"
}

shadowJar {
    //relocate 'net.kyori.adventure', 'shadow.adventure'
}
tasks.build.dependsOn tasks.shadowJar